@@ -69,7 +69,11 @@
  */
 
 #ifndef MODULE_SCOPE
-#define MODULE_SCOPE extern
+#   ifdef __cplusplus
+#	define MODULE_SCOPE extern "C"
+#   else
+#	define MODULE_SCOPE extern
+#   endif
 #endif
 
 /*
